--- a/index.html
+++ b/index.html
@@ -8,7 +8,32 @@
   </head>
 
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <form class="feedback-form" id="feedback-form" autocomplete="off">
+        <label class="form-label">
+          Email
+          <input type="email" name="email" autofocus />
+        </label>
+
+        <label class="form-label">
+          Message
+          <textarea name="message" rows="8"></textarea>
+        </label>
+
+        <button type="submit">Submit</button>
+      </form>
+
+      <div class="feedback-wrapper">
+        <h2>Feedback</h2>
+
+        <ul class="feedback" id="feedback">
+          <li class="feedback-item">
+            <span>xytejema@mailinator.com</span>
+            <span>Voluptatem ut aut ma</span>
+          </li>
+        </ul>
+      </div>
+    </div>
 
     <script type="module" src="./src/main.js"></script>
   </body>
