--- a/index.html
+++ b/index.html
@@ -26,12 +26,7 @@
       <div class="feedback-wrapper">
         <h2>Feedback</h2>
 
-        <ul class="feedback" id="feedback">
-          <li class="feedback-item">
-            <span>xytejema@mailinator.com</span>
-            <span>Voluptatem ut aut ma</span>
-          </li>
-        </ul>
+        <ul class="feedback" id="feedback"></ul>
       </div>
     </div>
 
